# ai_crew_automation_for_intelligent_clinic_prospecting

./: .env  README.md  pyproject.toml
docs/: project_flowchart.md
src/ai_crew_automation_for_intelligent_clinic_prospecting/: crew.py  main.py
src/ai_crew_automation_for_intelligent_clinic_prospecting/config/: agents.yaml  embeddings_config.py  llm_config.py  tasks.yaml
src/ai_crew_automation_for_intelligent_clinic_prospecting/tools/: search_tool.py
