[project]
name = "ai_crew_automation_for_intelligent_clinic_prospecting"
version = "0.1.0"
description = "ai_crew_automation_for_intelligent_clinic_prospecting using crewAI"
authors = [{ name = "Owais-Noorani", email = "owaisabbasi44321@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "langchain-google-genai>=0.0.10",
    "google-search-results>=2.4.2"
]

[project.scripts]
ai_crew_automation_for_intelligent_clinic_prospecting = "ai_crew_automation_for_intelligent_clinic_prospecting.main:run"
run_crew = "ai_crew_automation_for_intelligent_clinic_prospecting.main:run"
train = "ai_crew_automation_for_intelligent_clinic_prospecting.main:train"
replay = "ai_crew_automation_for_intelligent_clinic_prospecting.main:replay"
test = "ai_crew_automation_for_intelligent_clinic_prospecting.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
